# pycounts_tt_2024

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
src/pycounts_tt_2024/: __init__.py
tests/: test_pycounts_tt_2024.py
