[tool.poetry]
name = "pycounts_tt_2024"
version = "0.4.0"
description = "Calculate word counts in a text file!"
authors = ["Tiffany Timbers"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"
pytest-cov = ">=4.1.0"
jupyter = ">=1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
python-semantic-release = "^8.7.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
] # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"              # build dists
#dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = true                      # don't auto-upload to PyPI
#remove_dist = false                         # don't remove dists

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
